# language-garden

./: .gitattributes  LICENSE  README.md  compile-arith.opam  compile-arithcond.opam  compile-sdf.opam  dune  dune-project  elab-builtins.opam  elab-dependent.opam  flake.nix  garden.dot  lang-fractal-growth.opam  lang-shader-graphics.opam  old-elab-dependent.opam
arith/: Main.ml  (+7 more)
compile-fofl/: README.md  anf.ml  core.ml  core_to_anf.ml  core_to_llvm.ml  core_to_wasm.ml  core_to_wat.ml  dune  emit_wat.ml  hoist.ml  hoisted.ml  llvm.ml  main.ml  name.ml  parser.mly  prim.ml  surface.ml  wasm.ml  wat.ml
compile-fofl/examples/: ackermann.anf  ackermann.ll  ackermann.tail-call.wat  ackermann.tc.wat  ackermann.wat  dune_inc.ml  even-odd.anf  even-odd.ll  even-odd.tail-call.wat  even-odd.tc.wat  even-odd.wat  fact-tailrec.anf  fact-tailrec.ll  fact-tailrec.wat  fact.anf  fact.ll  fact.tail-call.wat  fact.tc.wat  fact.txt  fact.wat  readme.tc.wat  readme.txt  readme.wat
compile-fofl/tests/: cli-help.t  cli-usage.t  dune  dune_inc.ml  join.anf  join.ll  join.tail-call.wat  join.tc.wat  join.txt  join.wat  let-expr.anf  let-expr.ll  let-expr.tc.wat  let-expr.txt  let-expr.wat  neg.anf  neg.ll  neg.txt  neg.wat  nested-if.anf  nested-if.ll  primops.ll  primops.tail-call.wat
compile-sdf/: Control.ml  Cpu.ml  Cpu.mli  Glsl.ml  Glsl.mli  Main.ml  Math.ml  MathTypes.ml  README.md  Sdf.ml  Shader.ml  ShaderTypes.ml  dune  tests.t
compile-sdf/test/: cli.t  dune  scene.glsl
elab-dependent/: Lexer.ml  Lib.ml  Main.ml  Parser.mly  README.md  Surface.ml  core.ml  dune  main.ml  parser.mly  surface.ml  tests.t
elab-dependent-sugar/: Main.ml  README.md  Surface.ml  core.ml  dune  lexer.ml  main.ml  parser.mly  surface.ml
elab-dependent-sugar/lib/: Core.ml  Lexer.mll  Parser.mly  Surface.ml  dune
elab-dependent-sugar/test/: dune  tests.t
elab-dependent/lib/: Core.ml  Elab.ml  Lexer.mll  Main.ml  Parser.mly  Surface.ml  dune
elab-dependent/test/: dune  tests.t
elab-generics/: README.md  core.ml  dune  lexer.ml  main.ml  parser.mly  prim.ml  surface.ml  tests.t
elab-generics-lettype/: README.md  core.ml  debruijn.ml  dune  lexer.ml  main.ml  parser.mly  surface.ml
elab-generics-lettype/examples/: ackermann.txt  dune_inc.ml  factorial.txt  fibonacci.stdout  fibonacci.txt  fix.stdout  pairs.stdout  pairs.txt  points-and-vectors.stdout
elab-generics-lettype/tests/: basic.t  dune  functions.t  let-poly.t  let-rec-poly.t  let-rec.t  let-type.t  let.t  syntax.t  tuples.t
elab-generics-tydefs/: README.md  core.ml  dune  lexer.ml  main.ml  parser.mly  surface.ml
elab-generics-tydefs/examples/: ackermann.stdout  combinators.stdout  combinators.txt  dune_inc.ml  points-and-vectors.txt
elab-generics-tydefs/tests/: basic.t  dune  functions.t  let-poly.t  let-rec.t  let-type.t  let.t  polymorphism.t  syntax.t  tuples.t
elab-generics/examples/: dune_inc.ml  even-odd.stdout  factorial.stdout  fix.txt  pairs.stdout  pairs.txt  readme.stdout  readme.txt
elab-generics/tests/: basic.t  dune  functions.t  let-poly.t  let-rec-poly.t  let-rec.t  let.t  letrec.t  polymorphism.t  tuples.t
elab-rankn-bidirectional/: Core.ml  Lexer.ml  Main.ml  Parser.mly  README.md  dune  tests.t
elab-stlc-bidirectional/: Core.ml  Lexer.mll  Main.ml  Parser.mly  README.md  Surface.ml  core.ml  dune  lexer.ml  main.ml  parser.mly  surface.ml  tests.t
elab-stlc-bidirectional-recovery/: core.ml  dune  lexer.ml  parser.mly  surface.ml  tests.t
elab-stlc-bidirectional-stratify/: Core.ml  Main.ml  Parser.mly  README.md  Surface.ml  core.ml  dune  lexer.ml  main.ml  parser.mly  surface.ml  tests.t
elab-stlc-error-recovery/: README.md  core.ml  dune  lexer.ml  main.ml  parser.mly  surface.ml  tests.t
elab-stlc-fix/: Core.ml  README.md  Surface.ml  dune  tests.t
elab-stlc-fix-records/: Core.ml  Parser.mly  README.md  dune  tests.t
elab-stlc-letrec/: Core.ml  Lexer.ml  Main.ml  Parser.mly  README.md  Surface.ml  dune  tests.t
elab-stlc-letrec-unification/: Core.ml  Parser.mly  README.md  Surface.ml  core.ml  dune  lexer.ml  main.ml  parser.mly  prim.ml  surface.ml  tests.t
elab-stlc-row-unification/: README.md  core.ml  dune  lexer.ml  main.ml  parser.mly  reporting.ml  surface.ml  tests.t
elab-stlc-unification/: Core.ml  Lexer.mll  Main.ml  Parser.mly  README.md  Surface.ml  core.ml  dune  lexer.ml  main.ml  parser.mly  surface.ml  tests.t
elab-stlc-unification-recovery/: README.md  core.ml  dune  main.ml  parser.mly  surface.ml  tests.t
elab-stlc-variant-unification/: Core.ml  Main.ml  README.md  Surface.ml  core.ml  dune  lexer.ml  main.ml  parser.mly  surface.ml  tests.t
elab-system-f-bidirectional/: README.md  Surface.ml  core.ml  dune  lexer.ml  main.ml  parser.mly  surface.ml  tests.t
elab-system-f-unification/: README.md  core.ml  dune  lexer.ml  main.ml  parser.mly  prim.ml  surface.ml  tests.t
elab-variant-unification/: Core.ml  Lexer.mll  Main.ml  Parser.mly  README.md  Surface.ml  dune  tests.t
lang-fractal-growth/: Examples.ml  Examples.mli  Main.ml  README.md  dune  test.t
lang-fractal-tree-rewriting/: IDEAS.md  README.md  dune  example.ml  index.html  index.ml
opam/: compile-arith.opam  compile-arithcond.opam  compile-closure-conv.opam  compile-items-funrefs.opam  elab-generics-lettype.opam  elab-record-patching.opam  elab-stlc-abstract.opam  elab-stlc-algebraic.opam  elab-stlc-bidirectional-recovery.opam  elab-stlc-bidirectional-stratify.opam  elab-stlc-bidirectional.opam  elab-stlc-letrec-unification.opam  elab-stlc-row-unification.opam  elab-stlc-unification.opam  elab-stlc-variant-unification.opam  elab-system-f-bidirectional.opam  elab-variant-unification.opam  lang-datalog.opam  lang-declarative-graphics.opam  lang-diagrams.opam  lang-doc-templates.opam  lang-fractal-growth.opam  lang-fractal-tree-rewriting.opam  lang-lc-interpreters.opam  lang-lc-name-binding.opam  lang-production-systems.opam  lang-shader-graphics.opam  scraps.opam  wip-compile-closure-conv.opam  wip-compile-stlc.opam  wip-compile-stratify.opam  wip-compile-uncurry.opam  wip-elab-builtins.opam
(+956 files in other folders)
