(executable
  (name Main)
  (public_name compile-sdf)
  (package compile-sdf))

(cram
  (package compile-sdf)
  (deps %{bin:compile-sdf}))

(env
  (dev
    ; see `ocamlc -warn-help` for information on warnings
    (flags (:standard -w -unused-constructor
                      -w -unused-value-declaration))))
