(executable
  (name main)
  (public_name dependent-sugar)
  (package elab-dependent-sugar)
  (preprocess
    (pps sedlex.ppx))
  (libraries
    cmdliner
    menhirLib
    sedlex))

(menhir
  (modules Parser)
  (flags --explain --strict))

(mdx
  (package elab-dependent-sugar)
  (deps %{bin:dependent}))
