(executable
 (name main)
 (public_name dependent-sugar)
 (package elab-dependent-sugar)
 (preprocess
  (per_module
   ((pps sedlex.ppx) lexer)))
 (libraries
  cmdliner
  menhirLib
  sedlex))

(menhir
 (modules parser)
 (flags --strict))

(mdx
 (package elab-dependent-sugar)
 (deps %{bin:dependent}))
