(executable
 (name main)
 (public_name generics-tydefs)
 (package elab-generics-tydefs)
 (preprocess
  (per_module
   ((pps sedlex.ppx) lexer)))
 (libraries
  cmdliner
  menhirLib))

(menhir
 (modules parser)
 (flags --strict))

(mdx
 (package elab-generics-tydefs)
 (deps %{bin:generics-tydefs}))

(cram
 (package elab-generics-tydefs)
 (deps %{bin:generics-tydefs}))
