(executable
 (name main)
 (public_name generics)
 (package elab-generics)
 (preprocess
  (pps sedlex.ppx))
 (libraries
  cmdliner
  menhirLib))

(menhir
 (modules parser)
 (flags --strict))

(mdx
 (package elab-generics)
 (deps %{bin:generics}))

(cram
 (package elab-generics)
 (deps %{bin:generics}))
