(executable
 (name main)
 (public_name generics)
 (package elab-generics)
 (preprocess
  (per_module
   ((pps sedlex.ppx) lexer)))
 (libraries
  cmdliner
  menhirLib))

(menhir
 (modules parser)
 (flags --strict))

(mdx
 (package elab-generics)
 (deps %{bin:generics}))

(cram
 (package elab-generics)
 (deps %{bin:generics}))
