(executable
  (name Main)
  (public_name rankn-bidirectional)
  (package elab-rankn-bidirectional)
  (preprocess
    (pps sedlex.ppx))
  (libraries
    cmdliner
    menhirLib))

(menhir
  (modules Parser)
  (flags --explain --strict))

(mdx
  (package elab-rankn-bidirectional)
  (deps %{bin:rankn-bidirectional}))

(cram
  (package elab-rankn-bidirectional)
  (deps %{bin:rankn-bidirectional}))
