(executable
 (name main)
 (public_name stlc-bidirectional-stratify)
 (package elab-stlc-bidirectional-stratify)
 (preprocess
  (pps sedlex.ppx))
 (libraries
  cmdliner
  menhirLib))

(menhir
 (modules parser)
 (flags --strict))

(mdx
 (package elab-stlc-bidirectional-stratify)
 (deps %{bin:stlc-bidirectional-stratify}))

(cram
 (package elab-stlc-bidirectional-stratify)
 (deps %{bin:stlc-bidirectional-stratify}))
