(executable
 (name main)
 (public_name stlc-bidirectional)
 (package elab-stlc-bidirectional)
 (preprocess
  (per_module
   ((pps sedlex.ppx) lexer)))
 (libraries
  cmdliner
  menhirLib))

(menhir
 (modules parser)
 (flags --strict))

(mdx
 (package elab-stlc-bidirectional)
 (deps %{bin:stlc-bidirectional}))

(cram
 (package elab-stlc-bidirectional)
 (deps %{bin:stlc-bidirectional}))
