(executable
 (name main)
 (public_name stlc-error-recovery)
 (package elab-stlc-error-recovery)
 (preprocess
  (per_module
   ((pps sedlex.ppx) lexer)))
 (libraries
  cmdliner
  menhirLib))

(menhir
 (modules parser)
 (flags --strict))

(mdx
 (package elab-stlc-error-recovery)
 (deps %{bin:stlc-error-recovery}))

(cram
 (package elab-stlc-error-recovery)
 (deps %{bin:stlc-error-recovery}))
