(executable
 (name Main)
 (public_name stlc-fix-records)
 (package elab-stlc-fix-records)
 (preprocess
  (pps sedlex.ppx))
 (libraries menhirLib))

(menhir
 (modules Parser)
 (flags --explain --strict))

(mdx
 (package elab-stlc-fix-records)
 (deps %{bin:stlc-fix-records}))

(cram
 (package elab-stlc-fix-records)
 (deps %{bin:stlc-fix-records}))
