(executable
  (name Main)
  (public_name stlc-letrec-unification)
  (package elab-stlc-letrec-unification)
  (preprocess
    (pps sedlex.ppx))
  (libraries
    cmdliner
    menhirLib))

(menhir
  (modules Parser)
  (flags --explain --strict))

(mdx
  (package elab-stlc-letrec-unification)
  (deps %{bin:stlc-letrec-unification}))

(cram
  (package elab-stlc-letrec-unification)
  (deps %{bin:stlc-letrec-unification}))
