(executable
 (name main)
 (public_name stlc-letrec-unification)
 (package elab-stlc-letrec-unification)
 (preprocess
  (per_module
   ((pps sedlex.ppx) lexer)))
 (libraries
  cmdliner
  menhirLib))

(menhir
 (modules parser)
 (flags --strict))

(mdx
 (package elab-stlc-letrec-unification)
 (deps %{bin:stlc-letrec-unification}))

(cram
 (package elab-stlc-letrec-unification)
 (deps %{bin:stlc-letrec-unification}))
