(executable
 (name main)
 (public_name stlc-row-unification)
 (package elab-stlc-row-unification)
 (preprocess
  (per_module
   ((pps sedlex.ppx) lexer)))
 (libraries
  cmdliner
  menhirLib))

(menhir
 (modules parser)
 (flags --strict))

(mdx
 (package elab-stlc-row-unification)
 (deps %{bin:stlc-row-unification}))

(cram
 (package elab-stlc-row-unification)
 (deps %{bin:stlc-row-unification}))
