(executable
  (name main)
  (public_name stlc-unification-recovery)
  (package elab-stlc-unification-recovery)
  (preprocess
    (pps sedlex.ppx))
  (libraries
    cmdliner
    menhirLib))

(menhir
  (modules parser)
  (flags --explain --strict))

(mdx
  (package elab-stlc-unification-recovery)
  (deps %{bin:stlc-unification-recovery}))

(cram
  (package elab-stlc-unification-recovery)
  (deps %{bin:stlc-unification-recovery}))
