(executable
  (name Main)
  (public_name stlc-unification)
  (package elab-stlc-unification))

(menhir
  (modules Parser)
  (flags --explain --strict))

(ocamllex Lexer)

(mdx
  (package elab-stlc-unification)
  (deps %{bin:stlc-unification}))

(cram
  (package elab-stlc-unification)
  (deps %{bin:stlc-unification}))
