(executable
 (name main)
 (public_name stlc-unification)
 (package elab-stlc-unification)
 (preprocess
  (per_module
   ((pps sedlex.ppx) lexer)))
 (libraries
  cmdliner
  menhirLib))

(menhir
 (modules parser)
 (flags --strict))

(mdx
 (package elab-stlc-unification)
 (deps %{bin:stlc-unification}))

(cram
 (package elab-stlc-unification)
 (deps %{bin:stlc-unification}))
