(executable
  (name Main)
  (public_name stlc-variant-unification)
  (package elab-stlc-variant-unification)
  (preprocess
    (pps sedlex.ppx))
  (libraries
    cmdliner
    menhirLib))

(menhir
  (modules Parser)
  (flags --explain --strict))

(mdx
  (package elab-stlc-variant-unification)
  (deps %{bin:stlc-variant-unification}))

(cram
  (package elab-stlc-variant-unification)
  (deps %{bin:stlc-variant-unification}))
