(executable
 (name main)
 (public_name system-f-bidirectional)
 (package elab-system-f-bidirectional)
 (preprocess
  (per_module
   ((pps sedlex.ppx) lexer)))
 (libraries
  cmdliner
  menhirLib))

(menhir
 (modules parser)
 (flags --strict))

(mdx
 (package elab-system-f-bidirectional)
 (deps %{bin:system-f-bidirectional}))

(cram
 (package elab-system-f-bidirectional)
 (deps %{bin:system-f-bidirectional})
 (setup_scripts cram_setup.sh))

(rule
 (write-file cram_setup.sh
  "alias executable=%{bin:system-f-bidirectional}"))
