(executable
  (name main)
  (public_name system-f-unification)
  (package elab-system-f-unification)
  (preprocess
    (pps sedlex.ppx))
  (libraries
    cmdliner
    menhirLib))

(menhir
  (modules parser)
  (flags --explain --strict))

(mdx
  (package elab-system-f-unification)
  (deps %{bin:system-f-unification}))

(cram
  (package elab-system-f-unification)
  (deps %{bin:system-f-unification}))
