(executable
 (name main)
 (public_name system-f-unification)
 (package elab-system-f-unification)
 (preprocess
  (per_module
   ((pps sedlex.ppx) lexer)))
 (libraries
  cmdliner
  menhirLib))

(menhir
 (modules parser)
 (flags --strict))

(mdx
 (package elab-system-f-unification)
 (deps %{bin:system-f-unification}))

(cram
 (package elab-system-f-unification)
 (deps %{bin:system-f-unification}))
