(executable
  (name Main)
  (public_name variant-unification)
  (package elab-variant-unification)
  (preprocess
    (pps sedlex.ppx))
  (libraries
    cmdliner
    menhirLib))

(menhir
  (modules Parser)
  (flags --explain --strict))

(mdx
  (package elab-variant-unification)
  (deps %{bin:variant-unification}))

(cram
  (package elab-variant-unification)
  (deps %{bin:variant-unification}))
