(executable
  (name Main)
  (public_name fractal-growth)
  (package lang-fractal-growth)
  (libraries
    cmdliner))

(cram
  (package lang-fractal-growth)
  (deps %{bin:fractal-growth}))

(env
  (dev
    ; see `ocamlc -warn-help` for information on warnings
    (flags (:standard -w -unused-constructor
                      -w -unused-type-declaration
                      -w -unused-value-declaration))))
